@@ -32,7 +32,7 @@ requires:
   perl: 5.6.2
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Config-Dot
-  homepage: https://github.com/tupinek/Config-Dot
+  homepage: https://github.com/michal-josef-spacek/Config-Dot
   license: http://opensource.org/licenses/bsd-license.php
-  repository: git://github.com/tupinek/Config-Dot
+  repository: git://github.com/michal-josef-spacek/Config-Dot
 version: '0.09'
