@@ -22,8 +22,8 @@ requires 'Readonly' => 0;
 requires 'perl' => '5.6.2';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Config-Dot';
-resources 'homepage' => 'https://github.com/tupinek/Config-Dot';
-resources 'repository' => 'git://github.com/tupinek/Config-Dot';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/Config-Dot';
+resources 'repository' => 'git://github.com/michal-josef-spacek/Config-Dot';
 test_requires 'English' => 0;
 test_requires 'Error::Pure::Utils' => 0.16;
 test_requires 'Test::More' => 0;
