@@ -166,7 +166,7 @@ SEE ALSO
         Module for simple configure file parsing with arrays.
 
 REPOSITORY
-    <https://github.com/tupinek/Config-Dot>
+    <https://github.com/michal-josef-spacek/Config-Dot>
 
 AUTHOR
     Michal Josef Špaček <mailto:skim@cpan.org>
